# ascii-physics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: demo_ascii.cpp  demo_cloth.cpp  demo_floating_boxes.cpp  demo_repulsive_particles.cpp  demo_spring.cpp
include/engine/: constraint.hpp  constraint_solver.hpp  drag_generator.hpp  euler_ode_solver.hpp  force_generator.hpp  frame.hpp  gravity_generator.hpp  math.hpp  midpoint_ode_solver.hpp  normal_force_generator.hpp  ode_solver.hpp  particle.hpp  renderer.hpp  repulsive_force_generator.hpp  simulation.hpp  simulation_config.hpp  sparse_matrix.hpp  spring_generator.hpp  surface.hpp  terminal_frame.hpp  utils.hpp  wind_generator.hpp
include/engine/detail/: constraint_solver.hpp  sparse_matrix.hpp
src/: constraint_solver.cpp  drag_generator.cpp  euler_ode_solver.cpp  gravity_generator.cpp  math.cpp  midpoint_ode_solver.cpp  normal_force_generator.cpp  ode_solver.cpp  particle.cpp  renderer.cpp  repulsive_force_generator.cpp  simulation.cpp  sparse_matrix.cpp  spring_generator.cpp  surface.cpp  terminal_frame.cpp  utils.cpp  wind_generator.cpp
tests/: golden.hpp  normal_force_generator.cpp  test_constraint_solver.cpp  test_drag_generator.cpp  test_euler_ode_solver.cpp  test_gravity_generator.cpp  test_math.cpp  test_midpoint_ode_solver.cpp  test_particle.cpp  test_renderer.cpp  test_renderer_regression.cpp  test_repulsive_force_generator.cpp  test_simulation.cpp  test_simulation_regression.cpp  test_simulation_regression_midpoint.cpp  test_simulation_utils.hpp  test_sparse_matrix.cpp  test_spring_generator.cpp  test_utils.hpp  test_wind_generator.hpp
tests/golden/render/: mosaic_corners_and_center.txt  overlapping_order.txt  render_center.txt  spring_diagonal.txt  spring_horizontal_midline.txt  tiny_disc_radius_one.txt
tests/golden/sim/: drag_decay.txt  free_flight_two_body.txt  gravity_drop_single.txt  mixed_forces_two_body.txt  sim_free_flight.txt  spring_oscillation_two_body.txt  wind_impulse_line.txt
tests/golden/sim_midpoint/: drag_decay_midpoint.txt  gravity_drop_single_midpoint.txt  mixed_forces_two_body_midpoint.txt  spring_oscillation_two_body_midpoint.txt  wind_impulse_line_midpoint.txt
